==> MilleniumSAT/MilleniumSAT/Core/Src/mcp2515.c <==
#include "mcp2515.h"
#include "stm32l0xx_hal.h"
#include <stdio.h>
#include "rm3100_spi.h"
#include "time.h"

void startSPI() {
	HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_RESET);
	HAL_Delay(1);
}

void endSPI() {
	HAL_GPIO_WritePin(MCP_CS_GPIO, MCP_CS_PIN, GPIO_PIN_SET);
	HAL_Delay(1);
}

enum ERROR reset(void)
{
    startSPI();
    uint8_t endereco = INSTRUCTION_RESET;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    endSPI();

    HAL_Delay(10);

    uint8_t zeros[14];
    memset(zeros, 0, sizeof(zeros));
    setRegisters(MCP_TXB0CTRL, zeros, 14);
    setRegisters(MCP_TXB1CTRL, zeros, 14);
    setRegisters(MCP_TXB2CTRL, zeros, 14);

    setRegister(MCP_RXB0CTRL, 0);
    setRegister(MCP_RXB1CTRL, 0);

    setRegister(MCP_CANINTE, CANINTF_RX0IF | CANINTF_RX1IF | CANINTF_ERRIF | CANINTF_MERRF);

    // receives all valid messages using either Standard or Extended Identifiers that
    // meet filter criteria. RXF0 is applied for RXB0, RXF1 is applied for RXB1
    modifyRegister(MCP_RXB0CTRL,
                   RXBnCTRL_RXM_MASK | RXB0CTRL_BUKT | RXB0CTRL_FILHIT_MASK,
                   RXBnCTRL_RXM_STDEXT | RXB0CTRL_BUKT | RXB0CTRL_FILHIT);
    modifyRegister(MCP_RXB1CTRL,
                   RXBnCTRL_RXM_MASK | RXB1CTRL_FILHIT_MASK,
                   RXBnCTRL_RXM_STDEXT | RXB1CTRL_FILHIT);

    // clear filters and masks
    // do not filter any standard frames for RXF0 used by RXB0
    // do not filter any extended frames for RXF1 used by RXB1
    enum RXF filters[] = {RXF0, RXF1, RXF2, RXF3, RXF4, RXF5};
    for (int i=0; i<6; i++) {
        bool ext = (i == 1);
        enum ERROR result = setFilter(filters[i], ext, 0);
        if (result != ERROR_OK) {
            return result;
        }
    }

    enum MASK masks[] = {MASK0, MASK1};
    for (int i=0; i<2; i++) {
    	enum ERROR result = setFilterMask(masks[i], true, 0);
        if (result != ERROR_OK) {
            return result;
        }
    }

    return ERROR_OK;
}

uint8_t readRegister(const REGISTER reg)
{
	uint8_t ret = 0;
    startSPI();
    uint8_t endereco = INSTRUCTION_READ;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    endereco = reg;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    HAL_SPI_Receive(spi_handle, &ret, 1, HAL_MAX_DELAY);
    endSPI();

    return ret;
}

void readRegisters(const REGISTER reg, uint8_t values[], const uint8_t n)
{
    startSPI();
    uint8_t endereco = INSTRUCTION_READ;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    endereco = reg;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    // mcp2515 has auto-increment of address-pointer
    for (uint8_t i=0; i<n; i++) {
    	HAL_SPI_Receive(spi_handle, &values[i], 1, HAL_MAX_DELAY);
    }
    endSPI();
}

void setRegister(const REGISTER reg, const uint8_t value)
{
    startSPI();
    uint8_t endereco = INSTRUCTION_WRITE;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    endereco = reg;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    endereco = value;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    endSPI();
}

void setRegisters(const REGISTER reg, const uint8_t values[], const uint8_t n)
{
    startSPI();
    uint8_t endereco = INSTRUCTION_WRITE;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    endereco = reg;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    for (uint8_t i=0; i<n; i++) {
    	endereco = values[i];
        HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    }
    endSPI();
}

void modifyRegister(const REGISTER reg, const uint8_t mask, const uint8_t data)
{
    startSPI();
    uint8_t endereco = INSTRUCTION_BITMOD;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    endereco = reg;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    endereco = mask;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    endereco = data;
    HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
    endSPI();
}

uint8_t getStatus(void)
{
	uint8_t ret = 0;
    startSPI();
    uint8_t endereco = INSTRUCTION_READ_STATUS;
	HAL_SPI_Transmit(spi_handle, &endereco, 1, HAL_MAX_DELAY);
	HAL_SPI_Receive(spi_handle, &ret, 1, HAL_MAX_DELAY);
    endSPI();

    return ret;
}
